2004-05-14  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (destroy): remove monospace_font notify callback

	Fixes #58366

2004-05-13  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (html_engine_get_image_factory): we can't use the
	toplevel engine here if we do we break relative urls and image
	updating from loading and animations.  If we want to preserve
	ifame factories through reloads we'll have to somethign else.

2004-05-13  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit.c (html_engine_new_text): do not check if color
	equals link, test just for text default color, link color is not
	applied anymore

	* htmltext.c (html_text_get_first_color_in_range): do not check if
	color equals link color, the link color attributes are handled at
	render time now
	(html_text_get_first_color_in_range): if no color set, use default
	Text color

	Fixes #58093

	* htmlengine.c (element_parse_img): set eat_space to FALSE again,
	it was lost somewhere during parser changes

	Fixes #56543
	
2004-05-11  Radek Doulik  <rodo@ximian.com>

	* htmltextslave.c (hts_fit_line): use html_text_slave_get_text
	instead of expensive html_text_get_text call

	* htmltext.c (html_text_calc_part_width): added start parameter to
	save html_text_get_text calls, updated every caller

	* htmlengine.c (element_parse_a): get attribute "href" to value
	and not to target - caused uninitialized memory be duplicated

	Fixes #58245

2004-05-10  Radek Doulik  <rodo@ximian.com>

	* htmlclueflow.c (layout_line): do not recalc size for splitted
	slaves as we only need asc/dsc and this we already know

	* htmltext.c (html_text_calc_part_width): update asc, dsc only
	when font or language changes

2004-05-09  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (client_notify_monospace_font): test if engine and
	painter are already created

2004-05-07  Radek Doulik  <rodo@ximian.com>

	* htmlcolorset.c (html_colorset_set_style): use cite_color
	property for default value or text color from style
